# kiro-lang

./: .gitignore  404.html  Cargo.toml  README.md  ROADMAP.md  build.rs  checklist.md  extension.html  index.html  mylib.kiro  showcase.kiro  simple.kiro  svelte.config.js  test_struct.kiro  tutorial.html  verify_import.kiro  verify_result_clone.kiro
internal/: version.json
kiro-vscode/kiro/: README.md  extension.js  package.json
kiro-zed/: Cargo.toml  README.md  extension.toml
kiro-zed/grammars/: kiro.wasm
kiro-zed/src/: lib.rs
kiro-zed/tree-sitter-kiro/: grammar.js  package.json  tree-sitter.json
kiro_macros/: Cargo.toml
kiro_macros/src/: lib.rs
kiro_runtime/: Cargo.toml  README.md
kiro_runtime/src/: lib.rs
learn-kiro/chapter-00/: 00_installation.md
learn-kiro/chapter-01/: 01_basics.kiro  01_basics.md
learn-kiro/chapter-02/: 02_control_flow.kiro  02_control_flow.md
learn-kiro/chapter-03/: 03_functions.kiro  03_functions.md
learn-kiro/chapter-04/: 04_data.kiro  04_data.md
learn-kiro/chapter-05/: 05_errors.kiro  05_errors.md
learn-kiro/chapter-06/: 06_advanced.kiro  06_advanced.md  06_async.kiro  (+1 more)
src/: analysis.rs  build_manager.rs  formatter.rs  host_generator.rs  lib.rs  lsp.rs  lsp_symbols.rs  main.rs  project.rs  test_runner.rs
tests/: async_semantics.rs  check_diagnostics.rs  compiler_interpreter_split.rs  embed_engine.rs  formatter.rs  generated_dependencies.rs  host_contract.rs  host_generator.rs  interpreter_v2.rs  kiro_smoke.rs  kiro_test_runner.rs  lsp_v1.rs  main.kiro  project_layout.rs  test.kiro
tutorial/: chapter-10.html
(+107 files in other folders)
