[package]
name = "kiro-lang"
version = "0.1.0"
edition = "2024"

[features]
default = ["lsp"]
lsp = ["dep:lsp-server", "dep:lsp-types", "dep:serde_json", "dep:url"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
rayon = "1.11.0"
rust-sitter = { version = "0.4.5", default-features = false, features = ["tree-sitter-standard"] }
toml_edit = "0.24.0"
kiro_runtime = { path = "kiro_runtime" }
lsp-server = { version = "0.8.0", optional = true }
lsp-types = { version = "0.97.0", optional = true }
serde_json = { version = "1.0.150", optional = true }
url = { version = "2.5.8", optional = true }

[build-dependencies]
rust-sitter-tool = "0.4.5"
